<resources>
    <string name="app_name">Lab3</string>

    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="signed_out">Signed Out</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="apply">Apply</string>
    <string name="success_update_toast">Update successfully</string>
    <string name="failed_update_toast">error</string>
    <string name="select_image">Select Image</string>
    <string name="image_uploaded">Image Uploaded!!</string>
    <string name="failed_upload">\"Failed to upload \"</string>
    <string name="use_firebase">Use firebase</string>
    <string name="logout">logout</string>
    <string name="auth_failed">Authentication Failed.</string>
    <string name="room_id">room Id</string>
    <string name="waiting_round">Waiting for the rival round</string>
    <string name="start">Start</string>
    <string name="connect">Connect</string>
    <string name="create">Create</string>
    <string name="title_statistic">Statistic</string>
    <string name="title_game">Game</string>
    <string name="title_account">Account</string>
    <string name="leave_game_dialog">Leave the game?</string>
    <string name="leave">leave</string>
    <string name="cancel">cancel</string>
    <string name="create_new_game">Create new game</string>
    <string name="or">or</string>
    <string name="connect_to_existing">connect to existing</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="connected">Connected</string>
    <string name="room_Id_empty">room Id can\'t be empty</string>
    <string name="room_doees_not_exist">room with this Id does not exist</string>
    <string name="game_saved">game saved</string>
    <string name="select">Select</string>
    <string name="ok">Ok</string>
    <string name="win">win</string>
    <string name="defeat">defeat</string>
    <string name="party_over">Party is over</string>
    <string name="replace_pawn">Replace pawn</string>

</resources>