<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context=".Fragments.RoomFragment">

    <ProgressBar
        android:id="@+id/room_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        style="?android:attr/progressBarStyleHorizontal" />


    <LinearLayout
        android:id="@+id/room_title"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="@string/create_new_game" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/or" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="@string/connect_to_existing" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_gravity="center">

        <LinearLayout
            android:id="@+id/room_Id_view_layout"
            android:layout_marginTop="70dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="invisible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="room Id:"
                />

            <TextView
                android:id="@+id/room_Id_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:textAlignment="gravity"
                android:textIsSelectable="true"
                android:textSize="16sp"
                android:text="TextView" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/room_Id_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/room_id"
            android:layout_gravity="center">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/room_Id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textCursorDrawable="@drawable/color_cursor" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <Button
                android:id="@+id/connect_button"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                style="?attr/materialButtonOutlinedStyle"
                android:text="@string/connect" />

            <Button
                android:id="@+id/create_button"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                style="?attr/materialButtonOutlinedStyle"
                android:text="@string/create" />
        </LinearLayout>

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/start_game_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:enabled="false"
            android:text="@string/start"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>


</LinearLayout>